functions added: addGraph, deleteGraph, availableLayouts, layout

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 125,
    "metadata": {
     "collapsed": false
    },
@@ -159,12 +159,12 @@
     "for line in lines:\n",
     "    abRelations.append(line.split(\"\\t\"))\n",
     "g = Graph.TupleList(abRelations)\n",
-    "g.json = from_igraph(g)"
+    "gjson = from_igraph(g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 126,
    "metadata": {
     "collapsed": false
    },
@@ -191,18 +191,18 @@
        "   {'data': {'id': '8', 'name': 'R_SUCOASm'}}]}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g.json"
+    "gjson"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 171,
    "metadata": {
     "collapsed": false
    },
@@ -226,6 +226,17 @@
     "    status = \"initial status message\\n\"\n",
     "    _selectedNodes = [];\n",
     "        \n",
+    "    def addGraph(self, g):\n",
+    "      self._resetMessage();\n",
+    "      gjson = from_igraph(g)\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"addGraph\", \"status\": \"request\",\n",
+    "                                       \"callback\": \"\",    \"payload\": gjson});\n",
+    "     \n",
+    "    def deleteGraph(self):\n",
+    "      self._resetMessage();\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"deleteGraph\", \"status\": \"request\", \"callback\": \"\", \"payload\": \"\"});\n",
+    "     \n",
+    "        \n",
     "    def setSize(self, width, height):\n",
     "      self.status += \"setSize(%d, %d)\\n\" % (width, height)\n",
     "      self.frameWidth = width\n",
@@ -233,8 +244,7 @@
     "        \n",
     "    def fit(self, margin=50):\n",
     "      self.status += \"entering fit (%d)\\n\" % margin\n",
-    "      self.msgFromKernel = json.dumps({\"cmd\": \"fit\", \"status\": \"request\",\n",
-    "                                       \"callback\": \"\", \"payload\": margin});\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"fit\", \"status\": \"request\", \"callback\": \"\", \"payload\": margin});\n",
     "        \n",
     "    def getSelectedNodes(self):\n",
     "       return(self._selectedNodes);\n",
@@ -242,10 +252,21 @@
     "    def selectNodes(self, nodes):\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"selectNodes\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\", \"payload\": nodes});\n",
-    "       \n",
+    "\n",
+    "    def _resetMessage(self):   # ensures that any ensuing message is seen as novel in the browser\n",
+    "       self.msgFromKernel = json.dumps({\"cmd\": \"cleanSlate\", \"status\": \"nop\", \"callback\": \"\", \"payload\": \"\"});\n",
+    "\n",
+    "\n",
+    "    def availableLayouts(self):\n",
+    "        return([\"grid\", \"null\", \"random\", \"cose\", \"circle\", \"concentric\", \"breadthfirst\"]);\n",
+    "    \n",
+    "    def layout(self, name):\n",
+    "      self._resetMessage();\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"layout\", \"status\": \"request\", \"callback\": \"\", \"payload\": name});\n",
+    "        \n",
+    "        \n",
     "    def clearSelection(self):\n",
-    "      self. msgFromKernel = json.dumps({\"cmd\": \"freshStart\", \"status\": \"nop\",\n",
-    "                                        \"callback\": \"\", \"payload\": \"\"});\n",
+    "      self._resetMessage();\n",
     "      self. msgFromKernel = json.dumps({\"cmd\": \"clearSelection\", \"status\": \"request\",\n",
     "                                        \"callback\": \"\", \"payload\": \"\"});\n",
     "        \n",
@@ -269,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 172,
    "metadata": {
     "collapsed": false
    },
@@ -355,7 +376,7 @@
        "            console.log(\"calling this.fit\")\n",
        "            //cyWidget.cy.fit(100);\n",
        "            console.log(\"--- about to call loadGraph\")\n",
-       "            cyjsWidget.loadGraph(\"priyanka.json\");\n",
+       "            //cyjsWidget.loadGraph(\"priyanka.json\");\n",
        "            cyjsWidget.loadStyle(\"style.js\");\n",
        "            cyjsWidget.cy.layout({\"name\": \"grid\"});\n",
        "            console.log(\"    back from loadGraph\")\n",
@@ -459,6 +480,20 @@
        "           console.log(\"========================\");\n",
        "           console.log(this);\n",
        "           switch(msg.cmd) {\n",
+       "              case 'deleteGraph':\n",
+       "                this.cy.edges().remove();\n",
+       "                this.cy.nodes().remove();\n",
+       "                break;\n",
+       "              case 'addGraph':\n",
+       "                 var g = msg.payload;\n",
+       "                 console.log(\"addGraph request\")\n",
+       "                 console.log(g)\n",
+       "                 this.cy.add(g.elements)\n",
+       "                 break;\n",
+       "              case 'layout':\n",
+       "                 var layoutName = msg.payload;\n",
+       "                  this.cy.layout({\"name\": layoutName})\n",
+       "                  break;\n",
        "              case 'fit':\n",
        "                 var margin = msg.payload;\n",
        "                 console.log(\"fit with margin: \" + margin)\n",
@@ -611,7 +646,7 @@
     "            console.log(\"calling this.fit\")\n",
     "            //cyWidget.cy.fit(100);\n",
     "            console.log(\"--- about to call loadGraph\")\n",
-    "            cyjsWidget.loadGraph(\"priyanka.json\");\n",
+    "            //cyjsWidget.loadGraph(\"priyanka.json\");\n",
     "            cyjsWidget.loadStyle(\"style.js\");\n",
     "            cyjsWidget.cy.layout({\"name\": \"grid\"});\n",
     "            console.log(\"    back from loadGraph\")\n",
@@ -715,6 +750,20 @@
     "           console.log(\"========================\");\n",
     "           console.log(this);\n",
     "           switch(msg.cmd) {\n",
+    "              case 'deleteGraph':\n",
+    "                this.cy.edges().remove();\n",
+    "                this.cy.nodes().remove();\n",
+    "                break;\n",
+    "              case 'addGraph':\n",
+    "                 var g = msg.payload;\n",
+    "                 console.log(\"addGraph request\")\n",
+    "                 console.log(g)\n",
+    "                 this.cy.add(g.elements)\n",
+    "                 break;\n",
+    "              case 'layout':\n",
+    "                 var layoutName = msg.payload;\n",
+    "                  this.cy.layout({\"name\": layoutName})\n",
+    "                  break;\n",
     "              case 'fit':\n",
     "                 var margin = msg.payload;\n",
     "                 console.log(\"fit with margin: \" + margin)\n",
@@ -782,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 173,
    "metadata": {
     "collapsed": false
    },
@@ -794,14 +843,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 174,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget": "d5ee736b1b6d4ea4b1c0330ba5d3e45d"
+      "application/vnd.jupyter.widget": "b91c3e65b4734f419e21c070d8a018af"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -813,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 167,
    "metadata": {
     "collapsed": false
    },
@@ -821,10 +870,71 @@
     {
      "data": {
       "text/plain": [
-       "['3']"
+       "{'data': {},\n",
+       " 'elements': {'edges': [{'data': {'source': '0', 'target': '1'}},\n",
+       "   {'data': {'source': '1', 'target': '2'}},\n",
+       "   {'data': {'source': '3', 'target': '4'}},\n",
+       "   {'data': {'source': '3', 'target': '5'}},\n",
+       "   {'data': {'source': '5', 'target': '6'}},\n",
+       "   {'data': {'source': '5', 'target': '7'}},\n",
+       "   {'data': {'source': '5', 'target': '8'}}],\n",
+       "  'nodes': [{'data': {'id': '0', 'name': 'M_10fthf6glu_m'}},\n",
+       "   {'data': {'id': '1', 'name': 'R_FPGS9m\\n'}},\n",
+       "   {'data': {'id': '2', 'name': 'M_glu_DASH_DASH_DASH_L_m'}},\n",
+       "   {'data': {'id': '3', 'name': 'R_FPGS9m'}},\n",
+       "   {'data': {'id': '4', 'name': 'M_10fthf7glu_m\\n'}},\n",
+       "   {'data': {'id': '5', 'name': 'M_pi_m\\n'}},\n",
+       "   {'data': {'id': '6', 'name': 'R_PPCOACm'}},\n",
+       "   {'data': {'id': '7', 'name': 'R_SUCOAS1m'}},\n",
+       "   {'data': {'id': '8', 'name': 'R_SUCOASm'}}]}}"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from_igraph(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cy.addGraph(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cy.layout(\"breadthfirst\")\n",
+    "cy.fit(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 161,
    "metadata": {
     "collapsed": true
    },
@@ -843,6 +953,26 @@
    "source": [
     "cy.clearSelection()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cy.deleteGraph()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
