now adds node attribute 'type' based on node name

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 179,
    "metadata": {
     "collapsed": false
    },
@@ -159,12 +159,28 @@
     "for line in lines:\n",
     "    abRelations.append(line.split(\"\\t\"))\n",
     "g = Graph.TupleList(abRelations)\n",
+    "#gjson = from_igraph(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "metabolites = [i for i,j in enumerate(g.vs['name']) if re.search(\"^M_\", j)]\n",
+    "reactions = [i for i,j in enumerate(g.vs['name']) if re.search(\"^R_\", j)]\n",
+    "g.vs()[metabolites]['type'] = \"metabolite\"\n",
+    "g.vs()[reactions]['type'] = \"reaction\"\n",
     "gjson = from_igraph(g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 196,
    "metadata": {
     "collapsed": false
    },
@@ -180,18 +196,22 @@
        "   {'data': {'source': '5', 'target': '6'}},\n",
        "   {'data': {'source': '5', 'target': '7'}},\n",
        "   {'data': {'source': '5', 'target': '8'}}],\n",
-       "  'nodes': [{'data': {'id': '0', 'name': 'M_10fthf6glu_m'}},\n",
-       "   {'data': {'id': '1', 'name': 'R_FPGS9m\\n'}},\n",
-       "   {'data': {'id': '2', 'name': 'M_glu_DASH_DASH_DASH_L_m'}},\n",
-       "   {'data': {'id': '3', 'name': 'R_FPGS9m'}},\n",
-       "   {'data': {'id': '4', 'name': 'M_10fthf7glu_m\\n'}},\n",
-       "   {'data': {'id': '5', 'name': 'M_pi_m\\n'}},\n",
-       "   {'data': {'id': '6', 'name': 'R_PPCOACm'}},\n",
-       "   {'data': {'id': '7', 'name': 'R_SUCOAS1m'}},\n",
-       "   {'data': {'id': '8', 'name': 'R_SUCOASm'}}]}}"
+       "  'nodes': [{'data': {'id': '0',\n",
+       "     'name': 'M_10fthf6glu_m',\n",
+       "     'type': 'metabolite'}},\n",
+       "   {'data': {'id': '1', 'name': 'R_FPGS9m\\n', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '2',\n",
+       "     'name': 'M_glu_DASH_DASH_DASH_L_m',\n",
+       "     'type': 'metabolite'}},\n",
+       "   {'data': {'id': '3', 'name': 'R_FPGS9m', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '4', 'name': 'M_10fthf7glu_m\\n', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '5', 'name': 'M_pi_m\\n', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '6', 'name': 'R_PPCOACm', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '7', 'name': 'R_SUCOAS1m', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '8', 'name': 'R_SUCOASm', 'type': 'reaction'}}]}}"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 197,
    "metadata": {
     "collapsed": false
    },
@@ -290,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 198,
    "metadata": {
     "collapsed": false
    },
@@ -831,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 199,
    "metadata": {
     "collapsed": false
    },
@@ -843,14 +863,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 200,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget": "b91c3e65b4734f419e21c070d8a018af"
+      "application/vnd.jupyter.widget": "a785420e903641c6a57961d16d334231"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -862,45 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': {},\n",
-       " 'elements': {'edges': [{'data': {'source': '0', 'target': '1'}},\n",
-       "   {'data': {'source': '1', 'target': '2'}},\n",
-       "   {'data': {'source': '3', 'target': '4'}},\n",
-       "   {'data': {'source': '3', 'target': '5'}},\n",
-       "   {'data': {'source': '5', 'target': '6'}},\n",
-       "   {'data': {'source': '5', 'target': '7'}},\n",
-       "   {'data': {'source': '5', 'target': '8'}}],\n",
-       "  'nodes': [{'data': {'id': '0', 'name': 'M_10fthf6glu_m'}},\n",
-       "   {'data': {'id': '1', 'name': 'R_FPGS9m\\n'}},\n",
-       "   {'data': {'id': '2', 'name': 'M_glu_DASH_DASH_DASH_L_m'}},\n",
-       "   {'data': {'id': '3', 'name': 'R_FPGS9m'}},\n",
-       "   {'data': {'id': '4', 'name': 'M_10fthf7glu_m\\n'}},\n",
-       "   {'data': {'id': '5', 'name': 'M_pi_m\\n'}},\n",
-       "   {'data': {'id': '6', 'name': 'R_PPCOACm'}},\n",
-       "   {'data': {'id': '7', 'name': 'R_SUCOAS1m'}},\n",
-       "   {'data': {'id': '8', 'name': 'R_SUCOASm'}}]}}"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from_igraph(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 201,
    "metadata": {
     "collapsed": false
    },
@@ -911,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 202,
    "metadata": {
     "collapsed": false
    },
@@ -964,24 +946,6 @@
    "source": [
     "cy.deleteGraph()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
