newline removed from node names when appending to matrix

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false
    },
@@ -157,14 +157,43 @@
     "lines = open(\"test.tsv\").readlines()\n",
     "abRelations = []\n",
     "for line in lines:\n",
-    "    abRelations.append(line.split(\"\\t\"))\n",
+    "    abRelations.append(line.rstrip(\"\\n\").split(\"\\t\"))\n",
     "g = Graph.TupleList(abRelations)\n",
     "#gjson = from_igraph(g)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 214,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['M_10fthf6glu_m',\n",
+       " 'R_FPGS9m',\n",
+       " 'M_glu_DASH_DASH_DASH_L_m',\n",
+       " 'M_10fthf7glu_m',\n",
+       " 'M_pi_m',\n",
+       " 'R_PPCOACm',\n",
+       " 'R_SUCOAS1m',\n",
+       " 'R_SUCOASm']"
+      ]
+     },
+     "execution_count": 214,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.vs['name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 216,
    "metadata": {
     "collapsed": false
    },
@@ -191,27 +220,26 @@
        "{'data': {},\n",
        " 'elements': {'edges': [{'data': {'source': '0', 'target': '1'}},\n",
        "   {'data': {'source': '1', 'target': '2'}},\n",
-       "   {'data': {'source': '3', 'target': '4'}},\n",
-       "   {'data': {'source': '3', 'target': '5'}},\n",
-       "   {'data': {'source': '5', 'target': '6'}},\n",
-       "   {'data': {'source': '5', 'target': '7'}},\n",
-       "   {'data': {'source': '5', 'target': '8'}}],\n",
+       "   {'data': {'source': '1', 'target': '3'}},\n",
+       "   {'data': {'source': '1', 'target': '4'}},\n",
+       "   {'data': {'source': '4', 'target': '5'}},\n",
+       "   {'data': {'source': '4', 'target': '6'}},\n",
+       "   {'data': {'source': '4', 'target': '7'}}],\n",
        "  'nodes': [{'data': {'id': '0',\n",
        "     'name': 'M_10fthf6glu_m',\n",
        "     'type': 'metabolite'}},\n",
-       "   {'data': {'id': '1', 'name': 'R_FPGS9m\\n', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '1', 'name': 'R_FPGS9m', 'type': 'reaction'}},\n",
        "   {'data': {'id': '2',\n",
        "     'name': 'M_glu_DASH_DASH_DASH_L_m',\n",
        "     'type': 'metabolite'}},\n",
-       "   {'data': {'id': '3', 'name': 'R_FPGS9m', 'type': 'reaction'}},\n",
-       "   {'data': {'id': '4', 'name': 'M_10fthf7glu_m\\n', 'type': 'metabolite'}},\n",
-       "   {'data': {'id': '5', 'name': 'M_pi_m\\n', 'type': 'metabolite'}},\n",
-       "   {'data': {'id': '6', 'name': 'R_PPCOACm', 'type': 'reaction'}},\n",
-       "   {'data': {'id': '7', 'name': 'R_SUCOAS1m', 'type': 'reaction'}},\n",
-       "   {'data': {'id': '8', 'name': 'R_SUCOASm', 'type': 'reaction'}}]}}"
+       "   {'data': {'id': '3', 'name': 'M_10fthf7glu_m', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '4', 'name': 'M_pi_m', 'type': 'metabolite'}},\n",
+       "   {'data': {'id': '5', 'name': 'R_PPCOACm', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '6', 'name': 'R_SUCOAS1m', 'type': 'reaction'}},\n",
+       "   {'data': {'id': '7', 'name': 'R_SUCOASm', 'type': 'reaction'}}]}}"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 203,
    "metadata": {
     "collapsed": false
    },
@@ -913,10 +941,10 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "['0', '1', '2', '3', '4', '5', '6', '7', '8']"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
