added setPosition, supporting igraph layouts

--- a/self-contained-notebooks/simple/simple.ipynb
+++ b/self-contained-notebooks/simple/simple.ipynb
@@ -147,69 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from igraph import *\n",
-    "lines = open(\"test.tsv\").readlines()\n",
-    "abRelations = []\n",
-    "for line in lines:\n",
-    "    abRelations.append(line.rstrip(\"\\n\").split(\"\\t\"))\n",
-    "g = Graph.TupleList(abRelations)\n",
-    "#gjson = from_igraph(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 214,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['M_10fthf6glu_m',\n",
-       " 'R_FPGS9m',\n",
-       " 'M_glu_DASH_DASH_DASH_L_m',\n",
-       " 'M_10fthf7glu_m',\n",
-       " 'M_pi_m',\n",
-       " 'R_PPCOACm',\n",
-       " 'R_SUCOAS1m',\n",
-       " 'R_SUCOASm']"
-      ]
-     },
-     "execution_count": 214,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "g.vs['name']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 215,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "metabolites = [i for i,j in enumerate(g.vs['name']) if re.search(\"^M_\", j)]\n",
-    "reactions = [i for i,j in enumerate(g.vs['name']) if re.search(\"^R_\", j)]\n",
-    "g.vs()[metabolites]['type'] = \"metabolite\"\n",
-    "g.vs()[reactions]['type'] = \"reaction\"\n",
-    "gjson = from_igraph(g)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 258,
    "metadata": {
     "collapsed": false
    },
@@ -225,32 +163,138 @@
        "   {'data': {'source': '4', 'target': '5'}},\n",
        "   {'data': {'source': '4', 'target': '6'}},\n",
        "   {'data': {'source': '4', 'target': '7'}}],\n",
-       "  'nodes': [{'data': {'id': '0',\n",
-       "     'name': 'M_10fthf6glu_m',\n",
-       "     'type': 'metabolite'}},\n",
-       "   {'data': {'id': '1', 'name': 'R_FPGS9m', 'type': 'reaction'}},\n",
-       "   {'data': {'id': '2',\n",
-       "     'name': 'M_glu_DASH_DASH_DASH_L_m',\n",
-       "     'type': 'metabolite'}},\n",
-       "   {'data': {'id': '3', 'name': 'M_10fthf7glu_m', 'type': 'metabolite'}},\n",
-       "   {'data': {'id': '4', 'name': 'M_pi_m', 'type': 'metabolite'}},\n",
-       "   {'data': {'id': '5', 'name': 'R_PPCOACm', 'type': 'reaction'}},\n",
-       "   {'data': {'id': '6', 'name': 'R_SUCOAS1m', 'type': 'reaction'}},\n",
-       "   {'data': {'id': '7', 'name': 'R_SUCOASm', 'type': 'reaction'}}]}}"
+       "  'nodes': [{'data': {'id': '0', 'name': 'M_10fthf6glu_m'}},\n",
+       "   {'data': {'id': '1', 'name': 'R_FPGS9m'}},\n",
+       "   {'data': {'id': '2', 'name': 'M_glu_DASH_DASH_DASH_L_m'}},\n",
+       "   {'data': {'id': '3', 'name': 'M_10fthf7glu_m'}},\n",
+       "   {'data': {'id': '4', 'name': 'M_pi_m'}},\n",
+       "   {'data': {'id': '5', 'name': 'R_PPCOACm'}},\n",
+       "   {'data': {'id': '6', 'name': 'R_SUCOAS1m'}},\n",
+       "   {'data': {'id': '7', 'name': 'R_SUCOASm'}}]}}"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "from igraph import *\n",
+    "lines = open(\"test.tsv\").readlines()\n",
+    "abRelations = []\n",
+    "for line in lines:\n",
+    "    abRelations.append(line.rstrip(\"\\n\").split(\"\\t\"))\n",
+    "g = Graph.TupleList(abRelations)\n",
+    "from_igraph(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "len(g.es())\n",
+    "g.es()['flux'] = random.sample(range(0, 1000), len(g.es()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 260,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "metabolites = [i for i,j in enumerate(g.vs['name']) if re.search(\"^M_\", j)]\n",
+    "reactions = [i for i,j in enumerate(g.vs['name']) if re.search(\"^R_\", j)]\n",
+    "g.vs()[metabolites]['type'] = \"metabolite\"\n",
+    "g.vs()[reactions]['type'] = \"reaction\"\n",
+    "gLayout = g.layout(\"kk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 282,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[{\"id\": 0, \"y\": -1.2981036242863813, \"x\": -1.6761992385563163}, {\"id\": 1, \"y\": -1.4281932727972664, \"x\": -0.5346324909642692}, {\"id\": 2, \"y\": -2.2766701028273424, \"x\": 0.23334124289011668}, {\"id\": 3, \"y\": -2.4092115924563418, \"x\": -1.0471332858421436}, {\"id\": 4, \"y\": -0.3793311876875062, \"x\": -0.003878720674612843}, {\"id\": 5, \"y\": 0.46966190583331924, \"x\": -0.7770848017164714}, {\"id\": 6, \"y\": 0.6035396673125726, \"x\": 0.5046770142731861}, {\"id\": 7, \"y\": -0.5084878092646536, \"x\": 1.1359003622644503}]'"
+      ]
+     },
+     "execution_count": 282,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tblPos = []\n",
+    "for i in range(0, len(gLayout)):\n",
+    "   tblPos.append({\"id\": i, \"x\": gLayout[i][0], \"y\": gLayout[i][1]})\n",
+    "json.dumps(tblPos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': {},\n",
+       " 'elements': {'edges': [{'data': {'flux': 340, 'source': '0', 'target': '1'}},\n",
+       "   {'data': {'flux': 95, 'source': '1', 'target': '2'}},\n",
+       "   {'data': {'flux': 975, 'source': '1', 'target': '3'}},\n",
+       "   {'data': {'flux': 198, 'source': '1', 'target': '4'}},\n",
+       "   {'data': {'flux': 653, 'source': '4', 'target': '5'}},\n",
+       "   {'data': {'flux': 694, 'source': '4', 'target': '6'}},\n",
+       "   {'data': {'flux': 505, 'source': '4', 'target': '7'}}],\n",
+       "  'nodes': [{'data': {'id': '0',\n",
+       "     'name': 'M_10fthf6glu_m',\n",
+       "     'type': 'metabolite'},\n",
+       "    'position': {'x': -167.6199238556316, 'y': -129.81036242863811}},\n",
+       "   {'data': {'id': '1', 'name': 'R_FPGS9m', 'type': 'reaction'},\n",
+       "    'position': {'x': -53.46324909642692, 'y': -142.81932727972665}},\n",
+       "   {'data': {'id': '2',\n",
+       "     'name': 'M_glu_DASH_DASH_DASH_L_m',\n",
+       "     'type': 'metabolite'},\n",
+       "    'position': {'x': 23.33412428901167, 'y': -227.66701028273422}},\n",
+       "   {'data': {'id': '3', 'name': 'M_10fthf7glu_m', 'type': 'metabolite'},\n",
+       "    'position': {'x': -104.71332858421437, 'y': -240.9211592456342}},\n",
+       "   {'data': {'id': '4', 'name': 'M_pi_m', 'type': 'metabolite'},\n",
+       "    'position': {'x': -0.3878720674612843, 'y': -37.93311876875062}},\n",
+       "   {'data': {'id': '5', 'name': 'R_PPCOACm', 'type': 'reaction'},\n",
+       "    'position': {'x': -77.70848017164714, 'y': 46.96619058333192}},\n",
+       "   {'data': {'id': '6', 'name': 'R_SUCOAS1m', 'type': 'reaction'},\n",
+       "    'position': {'x': 50.46770142731861, 'y': 60.35396673125726}},\n",
+       "   {'data': {'id': '7', 'name': 'R_SUCOASm', 'type': 'reaction'},\n",
+       "    'position': {'x': 113.59003622644504, 'y': -50.848780926465366}}]}}"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gjson = from_igraph(g, gLayout)\n",
     "gjson"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 299,
    "metadata": {
     "collapsed": false
    },
@@ -277,6 +321,12 @@
     "    def addGraph(self, g):\n",
     "      self._resetMessage();\n",
     "      gjson = from_igraph(g)\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"addGraph\", \"status\": \"request\",\n",
+    "                                       \"callback\": \"\",    \"payload\": gjson});\n",
+    "     \n",
+    "    def addGraphWithLayout(self, g, layout):\n",
+    "      self._resetMessage();\n",
+    "      gjson = from_igraph(g, layout)\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"addGraph\", \"status\": \"request\",\n",
     "                                       \"callback\": \"\",    \"payload\": gjson});\n",
     "     \n",
@@ -308,6 +358,16 @@
     "    def availableLayouts(self):\n",
     "        return([\"grid\", \"null\", \"random\", \"cose\", \"circle\", \"concentric\", \"breadthfirst\"]);\n",
     "    \n",
+    "    def setPosition(self, igraph_layout):   # the somewhat cryptic object created by igraph layouts\n",
+    "      tblPos = []\n",
+    "      for i in range(0, len(igraph_layout)):\n",
+    "         x = igraph_layout[i][0] * 100\n",
+    "         y = igraph_layout[i][1] * 100\n",
+    "         tblPos.append({\"id\": i, \"x\": x, \"y\": y})\n",
+    "      self._resetMessage();\n",
+    "      self.msgFromKernel = json.dumps({\"cmd\": \"setPosition\", \"status\": \"request\", \"callback\": \"\", \n",
+    "                                       \"payload\": tblPos});\n",
+    "       \n",
     "    def layout(self, name):\n",
     "      self._resetMessage();\n",
     "      self.msgFromKernel = json.dumps({\"cmd\": \"layout\", \"status\": \"request\", \"callback\": \"\", \"payload\": name});\n",
@@ -338,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 300,
    "metadata": {
     "collapsed": false
    },
@@ -404,15 +464,7 @@
        "            console.log(cyjsWidget);\n",
        "            this.cy = cytoscape({\n",
        "               container: document.getElementById('cyDiv'),\n",
-       "               //elements: {\n",
-       "               //nodes: [\n",
-       "               //  {data: {id: 'a', name: 'Node A', type: 'big' }},\n",
-       "               //  {data: {id: 'b', name: 'Node B', type: 'little'}},\n",
-       "               //  ],\n",
-       "              //edges: [\n",
-       "              //  {data: {source: 'a', target: 'b'}},\n",
-       "              //         {data: {source: 'b', target: 'a'}}\n",
-       "              // ]},\n",
+       "               layout: {name: 'preset'},\n",
        "          ready: function(){\n",
        "            console.log(\"small cyjs network ready\");\n",
        "            console.log(\"ready's notion of this:\")\n",
@@ -426,7 +478,7 @@
        "            console.log(\"--- about to call loadGraph\")\n",
        "            //cyjsWidget.loadGraph(\"priyanka.json\");\n",
        "            cyjsWidget.loadStyle(\"style.js\");\n",
-       "            cyjsWidget.cy.layout({\"name\": \"grid\"});\n",
+       "            //cyjsWidget.cy.layout({\"name\": \"grid\"});\n",
        "            console.log(\"    back from loadGraph\")\n",
        "            cyjsWidget.cy.on(\"select\", function(){\n",
        "               console.log(\"calling updateSelectionToKernel, on select\");\n",
@@ -540,8 +592,16 @@
        "                 break;\n",
        "              case 'layout':\n",
        "                 var layoutName = msg.payload;\n",
-       "                  this.cy.layout({\"name\": layoutName})\n",
-       "                  break;\n",
+       "                 this.cy.layout({\"name\": layoutName})\n",
+       "                 break;\n",
+       "              case 'setPosition':\n",
+       "                var positionObjects = msg.payload;\n",
+       "                console.log(\"calling setPosition map\");\n",
+       "                positionObjects.map(function(e){\n",
+       "                  var tag=\"[id='\" + e.id + \"']\";\n",
+       "                  cy.$(tag).position({x: e.x, y:e.y});\n",
+       "                  });\n",
+       "                break;\n",
        "              case 'fit':\n",
        "                 var margin = msg.payload;\n",
        "                 console.log(\"fit with margin: \" + margin)\n",
@@ -674,15 +734,7 @@
     "            console.log(cyjsWidget);\n",
     "            this.cy = cytoscape({\n",
     "               container: document.getElementById('cyDiv'),\n",
-    "               //elements: {\n",
-    "               //nodes: [\n",
-    "               //  {data: {id: 'a', name: 'Node A', type: 'big' }},\n",
-    "               //  {data: {id: 'b', name: 'Node B', type: 'little'}},\n",
-    "               //  ],\n",
-    "              //edges: [\n",
-    "              //  {data: {source: 'a', target: 'b'}},\n",
-    "              //         {data: {source: 'b', target: 'a'}}\n",
-    "              // ]},\n",
+    "               layout: {name: 'preset'},\n",
     "          ready: function(){\n",
     "            console.log(\"small cyjs network ready\");\n",
     "            console.log(\"ready's notion of this:\")\n",
@@ -696,7 +748,7 @@
     "            console.log(\"--- about to call loadGraph\")\n",
     "            //cyjsWidget.loadGraph(\"priyanka.json\");\n",
     "            cyjsWidget.loadStyle(\"style.js\");\n",
-    "            cyjsWidget.cy.layout({\"name\": \"grid\"});\n",
+    "            //cyjsWidget.cy.layout({\"name\": \"grid\"});\n",
     "            console.log(\"    back from loadGraph\")\n",
     "            cyjsWidget.cy.on(\"select\", function(){\n",
     "               console.log(\"calling updateSelectionToKernel, on select\");\n",
@@ -810,8 +862,16 @@
     "                 break;\n",
     "              case 'layout':\n",
     "                 var layoutName = msg.payload;\n",
-    "                  this.cy.layout({\"name\": layoutName})\n",
-    "                  break;\n",
+    "                 this.cy.layout({\"name\": layoutName})\n",
+    "                 break;\n",
+    "              case 'setPosition':\n",
+    "                var positionObjects = msg.payload;\n",
+    "                console.log(\"calling setPosition map\");\n",
+    "                positionObjects.map(function(e){\n",
+    "                  var tag=\"[id='\" + e.id + \"']\";\n",
+    "                  cy.$(tag).position({x: e.x, y:e.y});\n",
+    "                  });\n",
+    "                break;\n",
     "              case 'fit':\n",
     "                 var margin = msg.payload;\n",
     "                 console.log(\"fit with margin: \" + margin)\n",
@@ -879,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 301,
    "metadata": {
     "collapsed": false
    },
@@ -891,14 +951,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 302,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget": "a785420e903641c6a57961d16d334231"
+      "application/vnd.jupyter.widget": "92ab3c453bbe4ee3b47dd5511e898a3e"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -910,7 +970,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 303,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<igraph.Graph at 0x104d76318>"
+      ]
+     },
+     "execution_count": 303,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
    "metadata": {
     "collapsed": false
    },
@@ -921,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 305,
    "metadata": {
     "collapsed": false
    },
@@ -929,6 +1011,78 @@
    "source": [
     "cy.layout(\"breadthfirst\")\n",
     "cy.fit(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cy.setPosition(gLayout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 316,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "igraphLayoutStrategies = [\"circle\", \"drl\", \"fruchterman_reingold\", \n",
+    "                          \"fruchterman_reingold_3d\", \n",
+    "                          \"kamada_kawai\", \"kamada_kawai_3d\", \"lgl\",\n",
+    "                          \"random\", \"random_3d\", \"reingold_tilford\",\n",
+    "                          \"reingold_tilford_circular\", \"sphere\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "cy.setPosition(g.layout(\"circle\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 318,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---- circle\n",
+      "---- drl\n",
+      "---- fruchterman_reingold\n",
+      "---- fruchterman_reingold_3d\n",
+      "---- kamada_kawai\n",
+      "---- kamada_kawai_3d\n",
+      "---- lgl\n",
+      "---- random\n",
+      "---- random_3d\n",
+      "---- reingold_tilford\n",
+      "---- reingold_tilford_circular\n",
+      "---- sphere\n"
+     ]
+    }
+   ],
+   "source": [
+    "for strategy in igraphLayoutStrategies:\n",
+    "   print(\"---- %s\" % strategy)\n",
+    "   layout = g.layout(strategy)\n",
+    "   cy.setPosition(layout)\n",
+    "   cy.fit()\n",
+    "   time.sleep(2)"
    ]
   },
   {
